# OpenGL_Project

./: .gitignore  CMakeLists.txt  GLSL.h  OpenGLConfigure.h  README.md  Shader.cpp  Shader.h  main.cpp  textures.frag  textures.vs
ImgLib/: CMakeLists.txt
ImgLib/src/: BasicImageArray.h  ImageByte.cpp  ImageByte.h
ImgLibTest/: CMakeLists.txt
ImgLibTest/src/: ImgTest.cpp
ImgProcLib/: CMakeLists.txt
ImgProcLib/src/: ReszieFilter.cpp  ReszieFilter.h
OglCompute/: BstLogoArray.h  CMakeLists.txt  Define.hpp  EGLContent.cpp  EGLContent.hpp  FrameBufferObject.cpp  FrameBufferObject.hpp  GridFilterRender.cpp  GridFilterRender.hpp  ImageBlendRenderer.cpp  ImageBlendRenderer.hpp  ImageMatrixRenderer.cpp  ImageMatrixRenderer.hpp  ImageNV21Renderer.cpp  ImageNV21Renderer.hpp  ImageResampleRenderer.cpp  ImageResampleRenderer.hpp  ImageScaleRGB2RGBH.cpp  ImageScaleRGB2RGBH.hpp  ImageScaleRenderer.cpp  ImageScaleRenderer.hpp  LogoRenderer.cpp  LogoRenderer.h  MutiExposureRender.cpp  MutiExposureRender.hpp  OglBaseMem.hpp  OglCommonSSBO.cpp  OglCommonTexture.cpp  OglCompute.vcxproj  OglCompute.vcxproj.filters  OglGraphicTexture.cpp  OglGraphicTexture.h  OglHardwareTexture.cpp  OglTexture.hpp  OpenGLConfig.h  Renderer.cpp  Renderer.hpp  TimerVIP.h
OglCompute/jni/: Android.mk  Application.mk
Test/: main.cpp  person_900x900x1350.yuv
Test/ImgLib/: CMakeLists.txt
Test/ImgLib/include/: Image.h  ImageUtils.h  NEON_2_SSE.h  Optimation.h  SimpleType.h  utils.h
Test/ImgLib/src/: Image.cpp  ImageUtils.cpp  utils.cpp
