cmake_minimum_required(VERSION 3.19)
project(OGL)
set(GLEW_HOME "E:/SourceCode/GLEW")
set(GLFW_HOME "E:/SourceCode/GLFW")
set(GLM_HOME "E:/SourceCode/glm-0.9.9.8")
set(SOIL2_HOME "E:/SourceCode/SOIL2/build/Install")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${SOIL2_HOME}/include)
include_directories(${GLM_HOME})
include_directories(${GLEW_HOME}/include)
include_directories(${GLFW_HOME}/include)
link_directories(${GLEW_HOME}/lib)
link_directories(${GLFW_HOME}/lib)
link_directories(${SOIL2_HOME}/lib)
set(THRIFT_SRCS
        ${GLEW_HOME}/bin/*.dll
        ${GLFW_HOME}/bin/*.dll
        ${SOIL2_HOME}/bin/*.dll)
add_compile_options("-D__GLEW__")
file(GLOB_RECURSE DLL_FILE ${THRIFT_SRCS})
file(COPY ${DLL_FILE} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(GLOB SRC ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
add_executable(OGL ${SRC})
target_link_libraries(OGL soil2 glfw3dll glew32.dll opengl32)
